# zip-gui

./: .gitignore  README.md  ZipGUI.spec  app.py  pyproject.toml  requirements.txt  style.py  theme.qss
zip_gui/: app.py  style.py
