[project]
name = "zip_gui"
version = "1.0.1"
description = "A clean and straightforward graphical interface for compressing (packing) and extracting (unpacking) archive files, built with Python and PySide6."

keywords = ["GUI", "zip", "zip gui", "compress"]
authors = [
    { name = "curry tang", email = "twn39@163.com" }
]
maintainers = [
    { name = "curry tang", email = "twn39@163.com" }
]

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyside6>=6.9.0",
    "qtawesome>=1.4.0",
]

[project.scripts]
zip-gui = "zip_gui.app:run"

[project.urls]
"Homepage" = "https://github.com/twn39/zip-gui"
"Documentation" = "https://github.com/twn39/zip-gui"
"Repository" = "https://github.com/twn39/zip-gui"
"Source Code" = "https://github.com/twn39/zip-gui"


[build-system]
requires = ["hatchling==1.26.3"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pyinstaller>=6.13.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["zip_gui"]


